# forg

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  compile_flags.txt  forg.c  justfile
include/: autocomplete.h  validade.h
src/: colors.c  colors.h  forg.c  validade.c  validade.h  validate.c
test/: forg.conf
